--- a/src/welcome/assets/index.scss
+++ b/src/welcome/assets/index.scss
@@ -11,7 +11,13 @@ $list-group-hover-bg: $list-group-bg;
 $list-group-action-active-bg: $list-group-bg;
 $list-group-border-color: var(--vscode-notifications-border) !default;
 $list-group-action-color: var(--vscode-notifications-foreground) !default;
+$list-group-item-padding-y: .75rem !default;
+$list-group-item-padding-x: 1rem !default;
+
+$list-group-border-radius:          0 !default;
 
 $font-size-base: .8rem !default;
+
+$text-muted: var(--vscode-editorCodeLens-foreground) !default;
 
 @import "~bootstrap/scss/bootstrap";
